# narzedzia-programistyczne-w-pythonie-final-assignment

./: README.md  pyproject.toml
data-analyzer/: data_loader.py  preprocessor.py
data_analyzer/: analysis.py  data_loader.py  preprocessor.py  reporter.py
notebooks/: ANALIZA DANYCH.ipynb
scripts/: analiza_do_pliku.py
tests/: test_preprocessor.py
